--- a/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
+++ b/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
@@ -58,7 +58,7 @@
         [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page"
         [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]">
 
-        <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true">
+        <!-- <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true">
           <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
             let-selectFn="selectFn">
             <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected)"></mat-checkbox>
@@ -67,29 +67,34 @@
           <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected" let-onCheckboxChangeFn="onCheckboxChangeFn">
             <mat-checkbox [checked]="isSelected" (change)="onCheckboxChangeFn($event)"></mat-checkbox>
           </ng-template>
-        </ngx-datatable-column>
+        </ngx-datatable-column> -->
 
-        <ngx-datatable-column name="Nama" prop="scheduler_name">
+        <ngx-datatable-column [sortable]="false" name="Nama" prop="scheduler_name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span class="row-name" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]">{{row.scheduler_name}}</span>
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Trade Program" prop="creator_name"></ngx-datatable-column>
+        <ngx-datatable-column [sortable]="false" name="Trade Program" prop="creator_name"></ngx-datatable-column>
 
-        <ngx-datatable-column name="Tanggal Mulai" prop="start_date">
+        <ngx-datatable-column [sortable]="false" name="Periode" prop="start_date">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.start_date | date:'dd/MM/yyyy'}}
+            {{row.start_date | date:'dd/MM/yyyy'}} <br>s/d<br> {{row.end_date | date:'dd/MM/yyyy'}}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Tanggal Berakhir" prop="end_date">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.end_date | date:'dd/MM/yyyy'}}
-          </ng-template>
-        </ngx-datatable-column>
+        <ngx-datatable-column [sortable]="false" name="Audience / Grup" prop="audience_name"></ngx-datatable-column>
 
-        <ngx-datatable-column name="Audience / Grup" prop="audience_name"></ngx-datatable-column>
+        <ngx-datatable-column [sortable]="false" name="Status" prop="status_scheduler">
+            <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <div class="name-container">
+                  <p class="status text-truncate h6 p-4" style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
+                    [ngClass]="row.status_scheduler == 'publish' ? 'mat-green-800-bg' : 'mat-yellow-900-bg'">
+                    {{row.status_scheduler}}
+                  </p>
+                </div>
+            </ng-template>
+          </ngx-datatable-column>
 
         <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
