--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -1,92 +1,150 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
-    <!-- HEADER -->
-    <page-content-header [contentTitle]="'Admin Detail'">
-    </page-content-header>
-    <!-- / HEADER -->
-    <div class="content p-24">
-      <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
-  
-        <form [formGroup]="formWs">
-          <div class="ayo-top" fxLayout="row" fxLayoutAlign="space-between center">
-            <h3>Detil Wholesaler</h3>
-            <mat-form-field [class]="formWs.get('status').value === 'A' ? 'radius-select green' : 'radius-select red'">
-              <mat-select formControlName="status">
-                <mat-option [value]="status.value" *ngFor="let status of listStatus">{{status.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
+  <!-- HEADER -->
+  <page-content-header [contentTitle]="'Admin Detail'">
+  </page-content-header>
+  <!-- / HEADER -->
+  <div class="content p-24" *ngIf="!onLoad">
+    <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
+
+      <form [formGroup]="formWs">
+        <div class="ayo-top" fxLayout="row" fxLayoutAlign="space-between center">
+          <h3>Detil Wholesaler</h3>
+          <mat-form-field [class]="formWs.get('status').value === 'A' ? 'radius-select green' : 'radius-select red'">
+            <mat-select formControlName="status">
+              <mat-option [value]="status.value" *ngFor="let status of listStatus">{{status.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="ayo-middle pt-24" fxLayout="column">
+
+          <mat-form-field fxFlex="100" class="is-light">
+            <input matInput placeholder="Nama" type="text" formControlName="name">
+            <mat-error *ngIf="formWs.controls['name'].hasError('required') && formWs.controls['name'].touched ">
+              Nama Toko harus diisi.
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field fxFlex="100" class="is-light">
+            <input matInput placeholder="Alamat Toko" type="address" formControlName="address">
+            <mat-error *ngIf="formWs.controls['address'].hasError('required') && formWs.controls['address'].touched ">
+              Alamat Toko harus diisi.
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field fxFlex="100" class="is-light">
+            <input matInput type="text" placeholder="Kode Agen" formControlName="code">
+            <mat-error *ngIf="formWs.controls['code'].hasError('required') && formWs.controls['code'].touched ">
+              Kode Agen harus diisi.
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field fxFlex="100" class="is-light">
+            <input matInput type="text" placeholder="Nama Pemilik" formControlName="owner">
+            <mat-error *ngIf="formWs.controls['owner'].hasError('required') && formWs.controls['owner'].touched ">
+              Nama Pemilik harus diisi.
+            </mat-error>
+          </mat-form-field>
+
+          <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px">
+            <small>Nomor Ponsel</small>
+            <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
+              <mat-form-field fxFlex="7" fxFlex.xs="30" class="form-primary">
+                <input matInput value="+62" readonly>
+              </mat-form-field>
+              <mat-form-field fxFlex="95" fxFlex.xs="70" class="form-primary">
+                <input matInput formControlName="phone" type="tel" min="0">
+              </mat-form-field>
+            </div>
+            <mat-error *ngIf="formWs.controls['phone'].hasError('required') && formWs.controls['phone'].touched ">
+              Nomor ponsel harus diisi.
+            </mat-error>
           </div>
-          <div class="ayo-middle pt-24" fxLayout="column">
-  
-            <mat-form-field fxFlex="100" class="is-light">
-              <input matInput placeholder="Nama" type="text" formControlName="name">
-              <mat-error *ngIf="formWs.controls['name'].hasError('required') && formWs.controls['name'].touched ">
-                Nama Toko harus diisi.
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field fxFlex="100" class="is-light">
-              <input matInput placeholder="Alamat Toko" type="address" formControlName="address">
-              <mat-error *ngIf="formWs.controls['address'].hasError('required') && formWs.controls['address'].touched ">
-                Alamat Toko harus diisi.
-              </mat-error>
-            </mat-form-field>
 
-            <mat-form-field fxFlex="100" class="is-light">
-              <input matInput type="text" placeholder="Kode iSMS" formControlName="code">
-              <mat-error *ngIf="formWs.controls['code'].hasError('required') && formWs.controls['code'].touched ">
-                Kode iSMS harus diisi.
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field fxFlex="100" class="is-light">
-              <input matInput type="text" placeholder="Nama Pemilik" formControlName="owner">
-              <mat-error *ngIf="formWs.controls['owner'].hasError('required') && formWs.controls['owner'].touched ">
-                Nama Pemilik harus diisi.
-              </mat-error>
-            </mat-form-field>
-            
-            <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px">
-                <div class="label">Nomor Ponsel</div>
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                  <mat-form-field fxFlex="5" fxFlex.xs="30" class="form-primary">
-                    <input matInput value="+62" readonly>
-                  </mat-form-field>
-                  <mat-form-field fxFlex="95" fxFlex.xs="70" class="form-primary">
-                    <input matInput formControlName="phone" type="tel" min="0">
-                  </mat-form-field>
-                </div>
-                <mat-error *ngIf="formWs.controls['phone'].hasError('required') && formWs.controls['phone'].touched ">
-                  Nomor ponsel harus diisi.
-                </mat-error>
-              </div>
-
-              <mat-form-field fxFlex="100" class="is-light">
+          <!-- <mat-form-field fxFlex="100" class="is-light">
                 <input matInput type="text" placeholder="Area" formControlName="area_code">
                 <mat-error *ngIf="formWs.controls['area_code'].hasError('required') && formWs.controls['area_code'].touched ">
                   Area harus diisi.
                 </mat-error>
-              </mat-form-field>
-            
-            <!-- <mat-form-field fxFlex="100" class="is-light">
+              </mat-form-field> -->
+          <div fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="National" formControlName="national">
+                <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formWs.controls['national'].hasError('required') && formWs.controls['national'].touched">
+                National harus diisi
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', formWs.get('zone').value)">
+                <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formWs.controls['zone'].hasError('required') && formWs.controls['zone'].touched">
+                Zone harus diisi
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', formWs.get('region').value)">
+                <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formWs.controls['region'].hasError('required') && formWs.controls['region'].touched">
+                Regional harus diisi
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', formWs.get('area').value)">
+                <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formWs.controls['area'].hasError('required') && formWs.controls['area'].touched">
+                Area harus diisi
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', formWs.get('salespoint').value)">
+                <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formWs.controls['salespoint'].hasError('required') && formWs.controls['salespoint'].touched">
+                Salespoint harus diisi
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', formWs.get('district').value)">
+                <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formWs.controls['district'].hasError('required') && formWs.controls['district'].touched">
+                Distrik harus diisi
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Territory" formControlName="territory">
+                <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formWs.controls['territory'].hasError('required') && formWs.controls['territory'].touched">
+                Territori harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <!-- <mat-form-field fxFlex="100" class="is-light">
               <input matInput placeholder="Kata Sandi Baru" type="password" formControlName="password">
             </mat-form-field>
             <mat-form-field fxFlex="100" class="is-light">
               <input matInput placeholder="Konfirmasi Kata Sandi" type="password" formControlName="confirmation_password">
             </mat-form-field> -->
-  
-            <!-- <div class="btn-confirm" fxLayout="row" fxLayoutGap="25px">
+
+          <!-- <div class="btn-confirm" fxLayout="row" fxLayoutGap="25px">
               <button mat-stroked-button>Reset Password</button>
             </div> -->
-  
-            <div class="confirm btn-confirm" fxLayout="row" fxLayoutGap="25px">
-              <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
-                SIMPAN
-              </button>
-            </div>
-  
+
+          <div class="confirm btn-confirm py-24" fxLayout="row" fxLayoutGap="25px">
+            <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+              SIMPAN
+            </button>
           </div>
-        </form>
-      </div>
-  
+
+        </div>
+      </form>
     </div>
+
   </div>
-  
+</div>
