--- a/src/app/pages/sku-management/product/index/product-index.component.html
+++ b/src/app/pages/sku-management/product/index/product-index.component.html
@@ -10,7 +10,7 @@
   <!-- / HEADER -->
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
-      <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center"
+      <!-- <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center"
         class="p-16 export">
         <button mat-raised-button type="button" class="is-danger">
           <mat-icon>arrow_downward</mat-icon> Import CSV
@@ -18,7 +18,7 @@
         <button mat-raised-button type="button" class="is-danger">
           <mat-icon>arrow_upward</mat-icon> Export CSV
         </button>
-      </div>
+      </div> -->
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table">
         <h2 class="pl-8">Daftar Produk</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
